# nope.gl

./: .gitignore  CHANGELOG.md  README.md  TODO.txt  configure.py
.github/workflows/: ci_android.yml  ci_coverage.yml  ci_coverity.yml  ci_ios.yml  ci_linux.yml  ci_mac.yml  ci_mingw.yml  ci_msvc.yml  doc.yml  linters.yml  release.yml  release_android.yml  release_android_snapshot.yml  release_windows.yml
android/: .clang-format  .gitignore  build.gradle.kts  build.sh  bump.sh  gradle.properties  release.sh
android/gradle/: libs.versions.toml
android/hooks/: android.py
android/nopegl/: build.gradle.kts  consumer-rules.pro
android/plugins/: .gitignore  settings.gradle.kts
android/viewer/: build.gradle.kts
libngpu/: .clangd  meson.build  meson_options.txt  ngpu.rc.in
libngpu/scripts/: gen-gl-wrappers.py
libngpu/src/: bindgroup.c  bindgroup.h  block.c  block_desc.c  buffer.c  buffer.h  capture_renderdoc.c  ctx.c  ctx.h  fence.h  pgcache.c  pgcraft.c  pgcraft.h  pipeline.c  pipeline.h  program.c  program.h  rendertarget.c  rendertarget.h  staging_buffer.c  test_darray.c  texture.c  texture.h  type.c
libngpu/src/include/ngpu/: ngpu.h  ngpu_opengl.h  ngpu_vulkan.h
libngpu/src/ngpu/: .clang-format  bindgroup.c  buffer.c  ctx.c  pgcache.c  pgcraft.c  pipeline.c  rendertarget.c  rendertarget.h  texture.h
libngpu/src/ngpu/include/ngpu/: meson.build  ngpu.h
libngpu/src/ngpu/opengl/: buffer_gl.c  buffer_gl.h  cmd_buffer_gl.c  ctx_gl.c  ctx_gl.h  egl.h  fence_gl.c  fence_gl.h  format_gl.h  glcontext.h  glcontext_nsgl.m  glcontext_wgl.c  glfunctions.h  program_gl_utils.c  texture_gl.c  texture_gl.h
libngpu/src/ngpu/utils/: bstr.h  crc32.h  hmap.h  memory.h  string.c  thread.h  time.c  utils.h
libngpu/src/ngpu/vulkan/: bindgroup_vk.c  bindgroup_vk.h  buffer_vk.c  ctx_vk.c  ctx_vk.h  glslang_utils.c  pipeline_vk.h  rendertarget_vk.c  texture_vk.c  texture_vk.h  wsi_apple.m  ycbcr_sampler_vk.c  ycbcr_sampler_vk.h
libngpu/src/opengl/: bindgroup_gl.c  bindgroup_gl.h  buffer_gl.c  buffer_gl.h  cmd_buffer_gl.c  cmd_buffer_gl.h  ctx_gl.c  ctx_gl.h  egl.h  fence_gl.c  fence_gl.h  format_gl.c  format_gl.h  glcontext.c  glcontext.h  glcontext_eagl.m  glcontext_egl.c  glcontext_nsgl.m  glcontext_wgl.c  glfunctions.h  glincludes.h  glstate.c  glstate.h  pipeline_gl.c  pipeline_gl.h  priv_gl.h  program_gl.c  program_gl.h  program_gl_utils.c  program_gl_utils.h  rendertarget_gl.c  rendertarget_gl.h  texture_gl.c  texture_gl.h
libngpu/src/utils/: bits.h  crc32.c  darray.c  darray.h  hmap.c  log.c  log.h  memory.c  memory.h  pthread_compat.h  refcount.c  refcount.h  string.h  utils.h
libngpu/src/vulkan/: bindgroup_vk.c  bindgroup_vk.h  buffer_vk.c  buffer_vk.h  cmd_buffer_vk.c  cmd_buffer_vk.h  ctx_vk.c  ctx_vk.h  fence_vk.c  fence_vk.h  format_vk.c  format_vk.h  glslang_utils.c  glslang_utils.h  pipeline_vk.c  pipeline_vk.h  priv_vk.h  program_vk.c  program_vk.h  rendertarget_vk.c  rendertarget_vk.h  texture_vk.c  texture_vk.h  vkcontext.c  vkcontext.h  vkfunctions.h  vkutils.c  wsi_apple.m  ycbcr_sampler_vk.c  ycbcr_sampler_vk.h
libnopegl/: meson.build  nodes.specs
libnopegl/scripts/: gen-gl-wrappers.py
libnopegl/src/: aabb.c  aabb.h  android_ctx.c  android_imagereader.c  android_utils.c  animation.c  animation.h  api.c  api_android.c  atlas.c  bind_group.c  bind_group.h  bindgroup.c  bindgroup.h  blending.c  blending.h  buffer_layout.h  colorconv.c  colorconv.h  deserialize.c  distmap.c  dot.c  eval.c  fgblur.c  fgblur.h  filterschain.c  filterschain.h  gen_specs.c  geometry.c  geometry.h  gpu_ctx.c  gpu_ctx.h  hud.c  hwconv.c  hwconv.h  hwmap.c  hwmap.h  hwmap_common.c  image.c  image.h  (+142 more)
ngl-tools/: common.c  meson.build  ngl-desktop.c  ngl-player.c  ngl-render.c  ngl-viewer.c  nuklear.h  nuklear_ngpu.c  nuklear_ngpu.h  player.c  player.h  python_utils.c  time_utils.c  time_utils.h  viewer.h  viewer_blit.c  viewer_blit.h  viewer_compositor.c  viewer_compositor.h  viewer_config.c  viewer_config.h  viewer_export.c  viewer_export.h  viewer_hooks.c  viewer_hooks.h  viewer_python.c  viewer_python.h  viewer_scene.c  viewer_scene.h  viewer_ui.c  viewer_ui.h  wsi.c  wsi.h  wsi_cocoa.m  wsi_linux.c  wsi_windows.c
patches/boringssl/: 0001-Add-DTLS_get_data_mtu-DTLS_set_link_mtu-and-DTLS_get.patch  0002-Add-BIO_read_ex.patch
patches/ffmpeg/: 0001-avcodec-add-Mediacodec-audio-decoders-support.patch  0001-avcodec-add-av_jni_-get-set-_android_app_ctx-helper.patch  0002-avformat-add-Android-content-resolver-protocol-suppo.patch  0003-avcodec-jni-use-size_t-to-store-structure-offsets.patch  (+3 more)
pynopegl/: _pynopegl.pyx  init_header.py  setup.py
python/pynopegl-utils/: setup.py  (+1 more)
scripts/: blur-image.scm  gen-doc.py  release-changelog.py
tests/: anim.py  api.py  benchmark.py  blending.py  blur.py  color.py  compositing.py  compute.py  data.py  depth_stencil.py  drawrect.py  drawrect2d.py  effect2d.py  effects.py  filter.py  live.py  media.py  meson.build  noise.py  path.py  report_summary.py  rtt.py  scope.py  shape.py  text.py  texteffect.py  texture.py  transform.py  userlive.py  velocity.py
tests/effects/: bokeh.fsh  bubble.fsh  concreteframe.fsh  crosses.fsh  crosses2.fsh  crt.fsh  dustframe.fsh  dustscratches.fsh  dustscratchessoft.fsh  dustscratchesyellow.fsh  eightmmframe.fsh  ember.fsh  filmburns.fsh  frostedglass.fsh  glitch.fsh  glitchblocks.fsh  glitchchroma.fsh  glitchlines.fsh  glitchvideo.fsh  glitter.fsh  grain.fsh  grainnoise.fsh  hearts.fsh  ice.fsh  iridescentwave.fsh  levelsramp.fsh  neonframe.fsh  neonframefrance.fsh  neonframerainbow.fsh  neonframesmoke.fsh  neonframestraight.fsh  noise.fsh  oldvideo.fsh  papergrain.fsh  pinkvhs.fsh  plastic.fsh  radialblurchroma.fsh  repeatgridwarp.fsh  rotatecontinuous.fsh  shadowflat.fsh  (+19 more)
tests/refs/: anim_velocity_vec2.ref  anim_velocity_vec3.ref  live_group_reorder.ref  live_timerangefilter_update.ref  media_clamp.ref  media_phases_display.ref  rtt_shared_subgraph_implicit.ref  text_wrapping_center.ref  text_wrapping_disabled.ref  text_wrapping_left.ref  text_wrapping_right.ref  texture_reframing_wrap_discard.ref
(+304 files in other folders)
